[project]
name = "fin2764"
version = "0.1.1"
description = "Advanced Fixed-Income and Credit - Python Labs"
requires-python = "==3.13.*"
dependencies = [
    "cvxpy==1.7.2",
    "ipykernel==6.30.0",
    "matplotlib==3.10.5",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nbstripout==0.8.1",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "polars==1.32.0",
    "pulp==3.2.2",
    "pyarrow==21.0.0",
    "pyscipopt==5.6.0",
    "requests==2.32.4",
    "scipy==1.16.1",
    "seaborn==0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["functions_library"]

[tool.uv]
dev-dependencies = []

[tool.nbstripout]
keep_output = false
keep_count = false
keep_metadata = false
